--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+monkeyfrontik (0.2.1) unstable; urgency=low
+
+  * pyver fix
+
+ -- Pavel Trukhanov <p.trukhanov@hh.ru>  Wed, 11 Jan 2012 19:19:05 +0400
+
 monkeyfrontik (0.2.0) unstable; urgency=low
 
   * new ver! )
